4.Kubernetes容器网络/config/ingress/grpc-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: grpc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc
spec:
  selector:
    matchLabels:
      app: grpc
  replicas: 2
  template:
    metadata:
      labels:
        app: grpc
    spec:
      containers:
      - name: grpc
        image: findsec/grpc
        ports:
        - containerPort: 8080
        readinessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:8080"]
        livenessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:8080"]
