4.Kubernetes容器网络/config/ingress/echo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:  
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - '*.hipstershop.cn'
    secretName: letsencrypt-prod
  rules:
  - host: echo.hipstershop.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: echo
          servicePort: 80
