4.Kubernetes容器网络/config/ingress/echo-nginx-ingress-https.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - secretName: echo-hipstershop-cn-cert
  rules:
  - host: echo.hipstershop.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: echo
          servicePort: 80
