4.Kubernetes容器网络/config/ingress/echo-traefik-ingress-http.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-traefik-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: echo.hipstershop.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: echo
          servicePort: 80
